// version of protocol buffer used
syntax = "proto3";

// package name for buffer will be used later
package rockets;

// service which can be executed
service RocketLauncher {
// function which can be called
  rpc Send (RocketLaunchRequest) returns (RocketLaunchResponse);
  rpc SendStream(RocketLaunchRequest) returns (stream RocketLaunchResponse);
  rpc ReceiveStream(stream RocketLaunchRequest) returns (RocketLaunchResponse);
  rpc Bidirectional(stream RocketLaunchRequest) returns (stream RocketLaunchResponse);
}

// argument
message RocketLaunchRequest {
// data type and position of data
  string launchReq = 1;
  
}

// return value
message RocketLaunchResponse {
// data type and position of data
  string launchResp = 1;
}